Changelog for GoodNews

GoodNews 1.2.1-pl (2014-09-14)
--------------------------------------------------
- [#24] fixed rendering of grids in tab panels (resizing problem)
- fixed some PHP warnings in getgroupcatnodes.class.php
- fixed some IMAP warnings in bounce handler


GoodNews 1.2.0-pl (2014-09-09)
--------------------------------------------------
- [#23] fixed PHP memory limit problem on server with huge list of subscribers
- complete rewrite on how the sending engine handles recipients!
- huge performance increase and much better memory management for sending engine
- many other small memory and performance related enhancements
- added sending error counter to mailing grid


GoodNews 1.1.7-pl (2014-09-02)
--------------------------------------------------
- [#20] new feature to manually disable multiprocessing
- fixed another small bug in how cron security keys are checked :)
- added error handler loading to cron.php and cron.worker.php (needed since MODX 2.3+)


GoodNews 1.1.6-pl (2014-08-24)
--------------------------------------------------
- [#19] new feature to request secure links via email
- security fix for subscribers getlist processor
- fixed wrong width of "Created By" combo field in mailing editor
- fileuploadfield extension only needs to be loaded in MODX < 2.3 (natively supported in MODX >= 2.3)
- removed custom form field description styles - using default MODx style
- added feature to manually reset bounce counters of a subscriber
- Cosmetical changes to Groups/Categories tree
- added row-expander to subscribers grid for detailed informations and save grid space
- moved  subscriber id to row epander
- moved  subscriber ip address to row epander
- small corrections/changes in lexicon strings


GoodNews 1.1.5-pl (2014-07-25)
--------------------------------------------------

- additional CSS fixes (because of last minute changes in Revo 2.3)
- small corrections/changes in lexicon strings